<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">
        <requestFocus />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/author"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        android:visibility="gone"
        app:hintEnabled="true">
        <requestFocus />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorTv"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/genre"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">
        <requestFocus />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/genreTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/year"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">
        <requestFocus />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yearTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/poster_url"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">
        <requestFocus />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/posterUrlTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
